# 15Puzzle

./: .gitignore  BoardManager.cpp  CMakeLists.txt  Number.cpp  README.md  build.ninja  build.sh
src/: Board.cc  Board.cpp  Board.h  Board.hpp  BoardManager.cc  BoardManager.h  BoardManager.hh  CMakeLists.txt  FifteenPuzzle.cc  FifteenPuzzle.cpp  FifteenPuzzle.h  FifteenPuzzle.hpp  GameManager.cc  GameManager.h  Grid.cc  Grid.h  GridPoint.cc  GridPoint.cpp  GridPoint.h  MainWindow.cc  MainWindow.h  MoveDirection.h  Number.hh  Panel.cc  Panel.cpp  Panel.h  board.cc  board.h  board.hh  grid.cc  grid.h  grid.hh  main.cc  main.cpp  panel.cc  panel.h
src/models/: Board.cpp  Board.hpp  FifteenPuzzle.cpp  FifteenPuzzle.hpp  Panel.cpp  Panel.hpp
src/view_models/: MainWindow.cpp  MainWindow.hpp
src/views/: MainWindow.qml  qml.qrc
test/: BoardManagerTest.cc  BoardTest.cc  CMakeLists.txt  GridTest.cc  NumberTest.cpp  PanelTest.cc  board_test.cc  grid_test.cc  panel_test.cc
